# slack-bot-async

./: LICENSE  README.md  slack-api.cabal  slack-bot-async.cabal  stack.yaml
example/: CounterBot.hs  EchoBot.hs
examples/: CounterBot.hs  EchoBot.hs
lib/Slack/: Bot.hs
src/Web/: Slack.hs
src/Web/Slack/: Send.hs  Types.hs
src/Web/Slack/Types/: Config.hs  Event.hs  Payload.hs  Preferences.hs  Slack.hs  SlackBotSession.hs  SlackSendQueue.hs  Time.hs
src/Web/Slack/Types/Event/: Subtype.hs
tests/: Main.hs
tests/Tests/: ConnectionTest.hs
