name:                slack-api
version:             0.7
synopsis:            Bindings to the Slack RTM API.
description:         This library provides bindings to the <https://api.slack.com/rtm Slack Real Time Messaging API>.
                     Users should find it easy to program their own Slack bots using the functionality found
                     in `Web.Slack`.

                     The bindings are very nearly complete. Library authors
                     looking to build bindings to the <https://api.slack.com/web Slack Web API>
                     may find the `FromJSON` instances located in `Web.Slack.Types` useful.

                     Please note that the interface provided by this package is not yet stable.
                     There are a number of unresolved internal inconsistencies which have yet to be resolved
                     by Slack HQ.
license:             MIT
bug-reports:         https://github.com/mpickering/slack-api/issues

license-file:        LICENSE
author:              Matthew Pickering
maintainer:          matthewtpickering@gmail.com
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type: git
    location: https://github.com/mpickering/slack-api.git


Library
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  default-language: Haskell2010
  default-extensions: RankNTypes
                    , OverloadedStrings
                    , LambdaCase
  exposed-modules: Web.Slack
                 , Web.Slack.Types
                 , Web.Slack.Types.Base
                 , Web.Slack.Types.Bot
                 , Web.Slack.Types.Channel
                 , Web.Slack.Types.ChannelOpt
                 , Web.Slack.Types.Comment
                 , Web.Slack.Types.Config
                 , Web.Slack.Types.Error
                 , Web.Slack.Types.Event
                 , Web.Slack.Types.Event.Subtype
                 , Web.Slack.Types.File
                 , Web.Slack.Types.Group
                 , Web.Slack.Types.IM
                 , Web.Slack.Types.Id
                 , Web.Slack.Types.Item
                 , Web.Slack.Types.Payload
                 , Web.Slack.Types.Preferences
                 , Web.Slack.Types.Presence
                 , Web.Slack.Types.Self
                 , Web.Slack.Types.Session
                 , Web.Slack.Types.Slack
                 , Web.Slack.Types.SlackBotSession
                 , Web.Slack.Types.SlackSendQueue
                 , Web.Slack.Types.Team
                 , Web.Slack.Types.TeamPreferences
                 , Web.Slack.Types.Time
                 , Web.Slack.Types.Topic
                 , Web.Slack.Types.User

  other-modules: Web.Slack.Utils
  build-depends: base >= 4.8
               , aeson
               , bytestring
               , containers
               , errors
               , HsOpenSSL
               , io-streams
               , lens
               , lens-aeson
               , monad-loops
               , mtl
               , network
               , network-uri
               , openssl-streams
               , stm
               , text
               , time
               , time-locale-compat
               , transformers
               , websockets
               , wreq

Test-Suite tests
    type: exitcode-stdio-1.0
    main-is: tests-main.hs
    ghc-options: -threaded  -Wall
    default-language:    Haskell2010
    hs-source-dirs: tests .
    build-depends: slack-api, base
    other-modules: Tests.ConnectionTest
