name:                slack-bot-async
version:             1.0.0.0
synopsis:            Library for creating Slack bots
description:         See README.md
license:             MIT
bug-reports:         https://github.com/joehillen/slack-bot-async/issues
license-file:        LICENSE
author:              Joe Hillenbrand
maintainer:          joehillen@gmail.com
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.10
source-repository head
    type: git
    location: https://github.com/joehillen/slack-bot-async.git

library
  hs-source-dirs: lib
  ghc-options: -threaded -Wall -Werror
  default-language: Haskell2010
  exposed-modules: Slack.Bot
  build-depends: base >= 4.8
               , slack-api-types
               , aeson
               , bytestring
               -- , containers
               -- , errors
               , HsOpenSSL
               , io-streams
               , lens
               , lens-aeson
               -- , monad-loops
               , monad-logger
               , mtl
               , network
               , network-uri
               , openssl-streams
               , stm
               , text
               , time
               -- , time-locale-compat
               , transformers
               , websockets
               , wreq

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Main.hs
    ghc-options: -threaded -Wall -Werror
    default-language:    Haskell2010
    hs-source-dirs: tests
    build-depends: base
                 , slack-bot-async
                 , monad-logger
    other-modules: Tests.ConnectionTest

executable counterbot
    default-language: Haskell2010
    ghc-options: -threaded  -Wall -Werror
    build-depends: base
                 , slack-bot-async
                 , monad-logger
                 , stm
                 , text
    main-is: CounterBot.hs
    hs-source-dirs: examples

executable echobot
    default-language: Haskell2010
    ghc-options: -threaded  -Wall -Werror
    build-depends: base
                 , slack-bot-async
                 , monad-logger
                 , text
    main-is: EchoBot.hs
    hs-source-dirs: examples